@@ -1,9 +1,13 @@
 1.5.x:
     Fixed #1619 - Applying patch by seanmil, adding support for SLES.
+    
+    Fixed #1634 - Update virtual fact to differentiate OpenVZ 
+    hardware nodes and virtual environments
 
     Fixed #1509 - Fixed version recognition for SLES.
 
-    Fixes #1582 - Fix MAC address reporting for Linux bonding slave interfaces
+    Fixes #1582 - Fix MAC address reporting for Linux bonding 
+    slave interfaces
 
     Fixed #1575 - CentOS fix for Facter SPEC file
 
